force-app/main/default/objects/Eclipse__c/Eclipse__c.object-meta.xml
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <label>Eclipse</label>
    <nameField>
        <label>Eclipse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Eclipses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>