force-app/main/default/objects/Eclipse__c/fields/CIN_Type__c.field-meta.xml
<CustomField>
    <fullName>CIN_Type__c</fullName>
    <formula>IF(
AND(
ISBLANK(Account__c), NOT(ISBLANK(Relationship__c)) 
) , &apos;Relationship&apos;,  IF(
AND(
ISBLANK(Relationship__c), NOT(ISBLANK(Account__c)) 
) , &apos;Person&apos;, 
&apos;Person &amp; Relationship&apos;
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CIN Type</label>
    <type>Text</type>
</CustomField>