force-app/main/default/objects/Eclipse__c/fields/Dupetext__c.field-meta.xml
<CustomField>
    <fullName>Dupetext__c</fullName>
    <externalId>true</externalId>
    <label>Dupetext</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>