force-app/main/default/objects/Eclipse__c/fields/Eclipse_Status__c.field-meta.xml
<CustomField>
    <fullName>Eclipse_Status__c</fullName>
    <label>Eclipse Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>InActive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>