force-app/main/default/objects/Eclipse__c/fields/Formdup__c.field-meta.xml
<CustomField>
    <fullName>Formdup__c</fullName>
    <formula>Name &amp;&quot;&quot;&amp;  CIN_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formdup</label>
    <type>Text</type>
</CustomField>