force-app/main/default/objects/Eclipse__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MED</fullName>
            </value>
            <value>
                <fullName>DEN</fullName>
            </value>
            <value>
                <fullName>AYUR</fullName>
            </value>
            <value>
                <fullName>ENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>