force-app/main/default/objects/Eclipse__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship</label>
    <referenceTo>Relationship__c</referenceTo>
    <relationshipLabel>Eclipses</relationshipLabel>
    <relationshipName>Eclipses</relationshipName>
    <type>Lookup</type>
</CustomField>